# teamstyle17-1

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  members.csv  requirements.txt
src/: action.py  ai_agent.py  ai_proxy.py  ai_proxy_test.py  core  logger.py  main.py  ts17core  uiobj.py
src/cpp_headers/: README.MD  ai.cpp  communicate.cpp  teamstyle17.h
src/player_files/cpp_project/: CMakeLists.txt  CmakeLists.txt  README.MD  ai.cpp  build_project.bat  communicate.cpp  teamstyle17.h  选手工程构建&编译说明.txt
src/player_files/cpp_project/ai/: ai.cpp  teamstyle17.cpp  teamstyle17.h
src/player_files/cpp_project/communicate/: basic.h  communicate.cpp  communicate.h  dll_main.cpp
src/player_files/cpp_project/communicate/picojson/: picojson.h
tests/: test_action.py
